# sugukuru7

./: .env.example  .gcloudignore  .gitignore  3-1-2.xlsx  3-1別紙.xlsx  ANTIGRAVITY_INSTRUCTIONS.md  ANTIGRAVITY_KICKOFF_INSTRUCTIONS.md  Dockerfile.api  Dockerfile.web  Eight20260108153943utf8.csv  FINAL_DEPLOYMENT.md  SUGUKURU_FINAL_v7.md  SmartHR_crews_161fe041bb6c70094b319deb_20251228_120436.csv  SmartHR_crews_最新.csv  clear_and_import.py  cloudbuild.yaml  cursorrules  deploy_production.sh  docker-compose.yml  import_billing.py  import_eight.py  import_local_data.py  next.config.js  package-lock.json  package.json  policy.yaml  pyproject.toml  read_billing_docx.py  read_excel_tmp.py  requirements.txt  tailwind.config.js  ビザ申請依頼リスト.csv  人材管理リスト鹿児島.csv  参考様式第３－４号.xlsx  請求書_2025_11月稼働分.docx  随時届け.xlsx  随時届けについて.docx  随時届けについて.txt  随時届け必要.txt  随時届け必要.xlsx
app/: globals.css  layout.tsx  page.tsx
deploy/: CUSTOM_DOMAIN_SETUP.md  README.md  alert-api-errors.json  alert-db-cpu.json  apply_migrations.sh  apply_migrations_psql.sh  cleanup_and_retry.sh  finalize_deploy.sh  monitoring-alerts.yaml  setup_gcp.sh
public/: presentation.html
sql/: 001_extensions.sql  002_enums.sql  003_organizations.sql  004_people.sql  005_employments_assignments.sql  006_visa.sql  007_deals.sql  008_daily_operations.sql  009_dispatch_slots.sql  010_immigration_notices.sql  011_kpi.sql  012_documents.sql  013_views.sql  014_triggers.sql  015_seed_data.sql  016_deal_proposals.sql  017_notice_tracking.sql  018_fix_people_columns.sql  019_add_import_columns.sql  020_update_search_view.sql
(+102 files in other folders)
